Logo-JpMorgan-IEEExtreme

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -79,10 +79,10 @@
         <div class="row">
           <div class="container">
             <div class="row" style="margin-top: 2vmin;">
-                <!-- <div class="col-sm mt-5 mt-md-2">
+                <div class="col-sm mt-5 mt-md-2">
                     <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
                          style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div> -->
+                </div>
                 <div class="col-sm mt-5 mt-md-2">
                     <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
                          style="position: relative; top: 50%; transform: translateY(-50%);">
