--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -27,7 +27,7 @@
       </div>
 
     <mat-tab-group class="mt-5 group-margin">
-        <mat-tab label="2022">
+        <mat-tab label="{{ 'GENERAL.ACTUAL' | translate }}">
             <div class="bottomLine">
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
@@ -72,6 +72,7 @@
                 </div>
             </div>
         </mat-tab>
+      <!--
         <mat-tab label="2021">
             <div class="bottomLine">
                 <div class="container">
@@ -97,7 +98,7 @@
                         <div class="col-sm mt-5 mt-md-4">
                             <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                                  style="position: relative; top: 50%; transform: translateY(-50%); ">
-                        </div>    
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,7 +124,8 @@
                 </div>
             </div>
         </mat-tab>
-        <mat-tab label="{{ 'GENERAL.ALL' | translate }}">
+        -->
+        <mat-tab label="{{ 'GENERAL.PREVIOUS' | translate }}">
             <div class="bottomLine">
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
@@ -149,10 +151,16 @@
                             <img src="../../../../../assets/image/content/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
+                      <!--
                         <div class="col-sm">
                             <img src="../../../../../assets/image/content/flowics.png" height="45vmin" alt="Logo Flowics"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
+                        -->
+                      <div class="col-sm mt-5 mt-md-4">
+                        <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                             style="position: relative; top: 50%; transform: translateY(-50%); ">
+                      </div>
                         <div class="col-sm">
                             <img src="../../../../../assets/image/content/tgs.png" height="60vmin" alt="Logo TGS"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
@@ -167,6 +175,14 @@
                             <img src="../../../../../assets/image/content/unify.png" height="30vmin" alt="Logo Unify"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
+                      <div class="col-sm mt-5 mt-md-4">
+                        <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
+                             style="position: relative; top: 50%; transform: translateY(-50%);">
+                      </div>
+                      <div class="col-sm mt-5 mt-md-4">
+                        <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                             style="position: relative; top: 50%; transform: translateY(-50%);">
+                      </div>
                     </div>
                 </div>
             </div>
