--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -25,7 +25,7 @@
 <div>
   <div class="d-flex flex-row-reverse">
     <!-- Button is inside <a> tag because it allows a greater hitmark -->
-    <a href="https://forms.gle/HoKbXFNMDZGJmJtm9" target="_blank" class="button-text">
+    <a href="https://forms.gle/zdYmj6QgzH9iLuJF9" target="_blank" class="button-text">
       <button class="goback-button">
         {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
       </button>
