--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -11,7 +11,6 @@
 </header>
 
 <body>
-
     <!-- Inicio and facts -->
     <div class="bottomLine" id="home">
         <img src="../../../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
@@ -71,68 +70,35 @@
     </div>
 
     <!-- Sponsors -->
-
-    <div class="bottomLine" id="sponsorship">
+    <div class="bottomLine">
       <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <br>
-      <div class="sponsor">
-        <div class="row">
-          <div class="container">
-            <div class="row" style="margin-top: 2vmin;">
-                <div class="col-sm mt-5 mt-md-2">
-                    <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
-                         style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
-                <div class="col-sm mt-5 mt-md-2">
-                    <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                         style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
-            </div>
-            <!-- <div class="row">
-                <div class="col-sm mt-5 mt-md-4">
-                    <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
-                         style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
-                <div class="col-sm mt-5 mt-md-4">
-                    <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-                         style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
-                <div class="col-sm mt-5 mt-md-4">
-                    <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                         style="position: relative; top: 50%; transform: translateY(-50%); ">
-                </div>    
-            </div> -->
+        <div class="sponsor-listing">
+          <div *ngFor="let sponsor of sponsors">
+            <img class="sponsor-container" src="{{sponsor.img}}" alt="Logo + {{sponsor.name}}"/>
           </div>
         </div>
-      </div>
     </div>
 
-
     <!-- Sponsor team -->
-    <div class="noLine" id="sponsorship">
+    <div class="noLine">
       <h1>Sponsorship 2022</h1>
-      <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
+      <p class="sponsors-needed-text">{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
-
-              <div class="col-sm">
-                <div class="sponsorContact">
-                  <h3>Ricardo Lin</h3>
-                  <a href="mailto:xlin@itba.edu.ar" class="whiteLink">xlin@itba.edu.ar</a>
+                <div class="col-sm" *ngFor="let contact of contacts">
+                  <div class="sponsorContact">
+                    <h3>{{ contact.name }}</h3>
+                    <a href="mailto:{{contact.mail}}" class="whiteLink">
+                      {{contact.mail}}
+                    </a>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm">
-                <div class="sponsorContact">
-                  <h3>Nicolas Bustelo</h3>
-                  <a href="mailto:nbustelo@itba.edu.ar" class="whiteLink">nbustelo@itba.edu.ar</a>
-                </div>
-              </div>
             </div>
         </div>
     </div>
 
-    
-
 </body>
+
 <app-footer></app-footer>
 </html>
