--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -215,68 +215,14 @@
     <div class="bottomLine mt-4">
       <div class="row">
         <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
-
-        <br />
-
-        <div class="container">
-          <div class="row" style="margin-top: 2vmin">
-            <div class="col-sm mt-5 mt-md-2">
-              <img
-                src="../../../../../assets/image/content/jpmorgan.png"
-                height="90vmin"
-                alt="Logo jpmorgan"
-                style="
-                  position: relative;
-                  top: 50%;
-                  transform: translateY(-50%);
-                "
-              />
-            </div>
-            <div class="col-sm mt-5 mt-md-2">
-              <img
-                src="../../../../../assets/image/content/Schneider Logo.png"
-                height="70vmin"
-                alt="Logo Schneider Electric"
-                style="
-                  position: relative;
-                  top: 50%;
-                  transform: translateY(-50%);
-                "
-              />
-            </div>
-            <div class="col-sm mt-5 mt-md-2">
-              <img
-                src="../../../../../assets/image/content/innovid.png"
-                height="35vmin"
-                alt="Logo Innovid"
-                style="
-                  position: relative;
-                  top: 50%;
-                  transform: translateY(-50%);
-                "
-              />
-            </div>
-          </div>
-          <!--
-
-          <div class="row">
-            <div class="col-sm mt-5 mt-md-4">
-              <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-                    </div>
-            <div class="col-sm mt-5 mt-md-4">
-              <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-              style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
-            <div class="col-sm mt-5 mt-md-4">
-              <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-              style="position: relative; top: 50%; transform: translateY(-50%); ">
-            </div>
-        </div>
-      -->
+      </div>
+      <div class="sponsor-listing">
+        <div *ngFor="let sponsor of sponsors">
+          <img class="sponsor-container" src="{{sponsor.img}}" alt="Logo + {{sponsor.name}}"/>
         </div>
       </div>
     </div>
+
   </body>
   <app-footer></app-footer>
 </html>
