--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -6,12 +6,11 @@ html {
 }
 
 body {
-    padding: 2% 10% 0 10%;
+    padding: 3% 10% 0 10%;
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    padding-top: 70px;
 }
 
 .bottomLine {
@@ -73,8 +72,71 @@ body {
   object-fit: scale-down;
 }
 
+.aboutus-container {
+    display: inline-flex;
+    justify-content: space-evenly;
+    gap: 3rem;
+    margin: 1rem 0 1rem 0;
+    width: 100%;
+}
+
+.aboutus-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    flex: 1 1 auto;
+    width: 25%;
+    font-weight: lighter;
+}
+
+.aboutus-image {
+    object-fit: scale-down;
+    height: 5rem;
+    width: 5rem;
+    margin-bottom: 0.5rem;
+}
+
+.aboutus-section-header {
+    color: #0d47a1;
+    font-size: x-large;
+}
+
 .section-title {
     color: #181818;
+    font-size: xx-large;
+}
+
+.end-button-container {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 1rem;
+}
+
+.learn-more-button {
+  font-size: calc(0.5vw + 0.5rem);
+  font-weight: 600;
+  padding:  0.5rem 1.2rem;
+  border: solid rgb(23, 46, 148);
+  color: rgb(23, 46, 148) !important;
+  border-radius: 5px;
+  background-color: inherit;
+  border-width: 3px;
+  transition: all 175ms ease-in-out;
+}
+
+.learn-more-button:hover {
+  box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
+  color: white !important;
+  background-color: #0d47a1;
+  border-color: white;
+}
+
+.learn-more-button >.button-text {
+  color: rgb(23, 46, 148) !important;
+}
+.learn-more-button:hover > .button-text{
+  color: white !important;
 }
 
 mdb-card {
