--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,5 @@
-<div class="lds-roller"></div>
+<div class="spinner-container">
+  <div class="lds-roller">
+    <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+  </div>
+</div>
