fix(dataAnalysisCourse): changed classes links with colab ones

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -51,7 +51,7 @@
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>
               <ng-template [ngIf]="class1Open" [ngIfElse]="class1Closed">
-                  <a href="https://github.com/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb">{{
+                  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb">{{
                   'DATAANALYSIS.CLASSES.TITLE' | translate }}
                   1
                   </a>
@@ -84,7 +84,7 @@
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>
               <ng-template [ngIf]="class2Open" [ngIfElse]="class2Closed">
-                  <a href="https://github.com/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb">{{
+                  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb">{{
                       'DATAANALYSIS.CLASSES.TITLE' | translate }}
                       2
                       </a>
