fix(dataAnalysisCourse): changed solutions links for colab ones

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -68,7 +68,7 @@
       <!-- Boton del solucionario -->
       <mat-card-actions align="center">
           <ng-template [ngIf]="class2Open" [ngIfElse]="solutions1Closed">
-              <a href="https://github.com/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb">
+              <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb">
                   <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
               </a>
           </ng-template>
@@ -101,7 +101,7 @@
       <!-- Boton del solucionario -->
       <mat-card-actions align="center">
           <ng-template [ngIf]="class3Open" [ngIfElse]="solutions2Closed">
-              <a href="https://github.com/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb">
+              <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb">
                   <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
               </a>
           </ng-template>
